--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "antd": "^3.15.2",
+    "babel-plugin-import": "^1.11.0",
     "dva": "^2.4.1",
+    "prop-types": "^15.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
