--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "dependencies": {
     "antd": "^3.15.2",
     "babel-plugin-import": "^1.11.0",
+    "draft-js": "^0.10.5",
     "dva": "^2.4.1",
-    "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
