--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "antd": "^3.15.2",
     "babel-plugin-import": "^1.11.0",
-    "draft-js": "^0.10.5",
     "dva": "^2.4.1",
+    "dva-loading": "^3.0.2",
+    "moment": "^2.24.0",
     "qs": "^6.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
